--- a/src/pages/Aboutedit/Aboutedit.css
+++ b/src/pages/Aboutedit/Aboutedit.css
@@ -1,27 +1,28 @@
-.flex{
+.flex3{
     background: #d2d6dc;
     width: 600px;
     align-items: center;
     border-radius: 30px;
     display: flex;
     justify-content: center;
-    margin-top: 70px;
+    margin-top: 20px;
     margin-left: 300px;
-    height: 900px;
+    height: 970px;
+    flex-direction: column;
     }
     h3{
     color: #7a99b6;
-    margin-top: 10px;
-    font-size: 30px;
+    margin-top: 40px;
+    font-size: 20px;
     }
-    .inputsservices22{
-        margin-top: 10px;
+    .inputsservices3{
+        margin-top: 25px;
         display: flex;
         flex-direction: column;
         gap: 25px;
     
     }
-    .inputserv2{
+    .inputserv3{
     display: flex;
     align-items: center;
     margin: auto;
@@ -30,8 +31,8 @@
     background: #dee1e6;
     border-radius: 14px;
     }
-    .inputserv2 input{
-        height: 40px;
+    .inputserv3 input{
+        height: 50px;
         width: 400px;
         background: transparent;
         border: none;
@@ -39,7 +40,7 @@
         color: black;
         font-size: 19px;
         }
-        .btnrservices2{
+        .btnrservices3{
     
             display: flex;
             justify-content: center;
