--- a/src/pages/about-us/Aboutus.css
+++ b/src/pages/about-us/Aboutus.css
@@ -44,4 +44,49 @@
         border-radius: 10px;
         
     }
-    
+.p-card-header {
+width: 200px;
+display: flex;
+justify-content:start;
+align-content: center;
+
+}
+.card2{
+display: flex;
+justify-content: center;
+align-content: center;
+background: #fff;
+margin-top: 200px;
+}
+.description{
+display: flex;
+justify-content: center;
+flex-direction:column;
+}
+.Links{
+display: flex;
+flex-direction: row;
+gap: 30px;
+
+
+}
+.link{
+  display: flex;
+    gap: 20px;
+    flex-direction: column;
+  
+   
+}
+.icons{
+   width: 100px; 
+   height: 50px;
+   color: rgba(13, 161, 211, 0.747);
+   display: flex;
+   align-content: center;
+   justify-content:start;
+  
+}
+.p-card-title{
+    color:#526d82 ;
+}
+
